--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <main>
         <!-- Sección del banner principal -->
         <section class="hero-banner">
-            <img src="imagenes/01.jpg" alt="Imagen principal de buceo" />
+            <img src="imagenes/01.png" alt="Imagen principal de buceo" />
             <h1>BUCEA MÉXICO</h1>
             <p>Iniciate con un programa DISCOVERY SCUBA DIVING o realiza la certificación OPEN WATER DIVER para
                 aventuras subacuáticas ilimitadas y aprende técnicas para ayudar a proteger el Océano.</p>
